Issue #24326: Fixed audioop.ratecv() with non-default weightB argument. Original patch by David Moore.